# machine_learning_lib

./: CMakeLists.txt  LICENSE  main.cpp
include/util/: division.h  linear_model.h  matrix.h  measurement.h  ml_base_model.h  util_algorithm.h
src/: CMakeLists.txt
test/: test.cpp
